--- a/css/style.css
+++ b/css/style.css
@@ -59,19 +59,26 @@ main {
   flex-wrap: wrap;
 }
 
+main h2 {
+  color: #fff;
+  padding: 1rem;
+}
+
 section {
   display: flex;
   flex-wrap: wrap;
 }
 
 .movie {
-  width: 300px;
+  width: 350px;
+  height: 500px;
   margin: 1rem;
   background-color: var(--secondary-color);
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+  justify-content: space-between;
   position: relative;
   overflow: hidden;
-  border-radius: 3px;
+  border-radius: 50px;
 }
 
 .movie img{
