--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,13 @@ body {
 header {
   padding: 1rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   background-color: var(--secondary-color);
 }
 
 .search {
   background-color: transparent;
+  width: 400px;
   border: 2px solid var(--primary-color);
   border-radius: 50px;
   font-family: inherit;
